{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 246,
  "lineage": "6b8d982c-a9cb-4260-788f-5e732b01e4d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "o4bproject_magento_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "o4bproject_varnish_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "o4bproject-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:internet-gateway/igw-0b36e4b018728bbc2",
            "id": "igw-0b36e4b018728bbc2",
            "owner_id": "410587888893",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-igw"
            },
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "o4bproject_inner_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-inner-alb/de4fb840b76717fe",
            "arn_suffix": "app/AmpDevO4b-inner-alb/de4fb840b76717fe",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-AmpDevO4b-inner-alb-1378833714.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-inner-alb/de4fb840b76717fe",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AmpDevO4b-inner-alb",
            "security_groups": [
              "sg-072ebbb65c35274bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c1fa5d40ceae0ac9"
              },
              {
                "subnet_id": "subnet-0fa60287c4c2c1ac6"
              }
            ],
            "subnets": [
              "subnet-0c1fa5d40ceae0ac9",
              "subnet-0fa60287c4c2c1ac6"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-inner-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-inner-alb"
            },
            "vpc_id": "vpc-09637901bbd6f2946",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.o4bproject_inner_alb",
            "aws_subnet.o4bproject-private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "o4bproject_outer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-outer-alb/9a8cd423bb6acae1",
            "arn_suffix": "app/AmpDevO4b-outer-alb/9a8cd423bb6acae1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "AmpDevO4b-outer-alb-903797475.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-outer-alb/9a8cd423bb6acae1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AmpDevO4b-outer-alb",
            "security_groups": [
              "sg-016df23d4d32c0647"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f5544ac8342b14a"
              },
              {
                "subnet_id": "subnet-0f921ddbd0fe62bb1"
              }
            ],
            "subnets": [
              "subnet-03f5544ac8342b14a",
              "subnet-0f921ddbd0fe62bb1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-outer-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-outer-alb"
            },
            "vpc_id": "vpc-09637901bbd6f2946",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_security_group.o4bproject_outer_alb",
            "aws_subnet.o4bproject-public",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "o4bproject_inner_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:listener/app/AmpDevO4b-inner-alb/de4fb840b76717fe/ead4ed9cc2646cdc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-inner-alb/e3947311cdacbfa7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:listener/app/AmpDevO4b-inner-alb/de4fb840b76717fe/ead4ed9cc2646cdc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-inner-alb/de4fb840b76717fe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.o4bproject_inner_alb",
            "aws_lb_target_group.o4bproject_inner_alb",
            "aws_security_group.o4bproject_inner_alb",
            "aws_subnet.o4bproject-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "o4bproject_outer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:listener/app/AmpDevO4b-outer-alb/9a8cd423bb6acae1/825114946c442a18",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-outer-alb/33f2718fe9ff6006",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:listener/app/AmpDevO4b-outer-alb/9a8cd423bb6acae1/825114946c442a18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:loadbalancer/app/AmpDevO4b-outer-alb/9a8cd423bb6acae1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.o4bproject_outer_alb",
            "aws_lb_target_group.o4bproject_outer_alb",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_security_group.o4bproject_outer_alb",
            "aws_subnet.o4bproject-public",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "o4bproject_inner_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-inner-alb/e3947311cdacbfa7",
            "arn_suffix": "targetgroup/AmpDevO4b-inner-alb/e3947311cdacbfa7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/~/src/health_checks",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-inner-alb/e3947311cdacbfa7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "AmpDevO4b-inner-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "o4bproject_outer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-outer-alb/33f2718fe9ff6006",
            "arn_suffix": "targetgroup/AmpDevO4b-outer-alb/33f2718fe9ff6006",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/~/src/health_checks",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410587888893:targetgroup/AmpDevO4b-outer-alb/33f2718fe9ff6006",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "AmpDevO4b-outer-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "o4bproject-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "o4bproject-nat-gateway-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-gateway-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b36e4b018728bbc2",
            "id": "r-rtb-04cdf2a1d61540bb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04cdf2a1d61540bb1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.o4bproject-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:route-table/rtb-07df900256b54acaf",
            "id": "rtb-07df900256b54acaf",
            "owner_id": "410587888893",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:route-table/rtb-04cdf2a1d61540bb1",
            "id": "rtb-04cdf2a1d61540bb1",
            "owner_id": "410587888893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b36e4b018728bbc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf779ce89741a544",
            "route_table_id": "rtb-07df900256b54acaf",
            "subnet_id": "subnet-0c1fa5d40ceae0ac9"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.o4bproject-private",
            "aws_vpc.o4bproject"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006f9c9cb73e6c34f",
            "route_table_id": "rtb-07df900256b54acaf",
            "subnet_id": "subnet-0fa60287c4c2c1ac6"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.o4bproject-private",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d5732330c5cd9e",
            "route_table_id": "rtb-04cdf2a1d61540bb1",
            "subnet_id": "subnet-03f5544ac8342b14a"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.o4bproject-public",
            "aws_vpc.o4bproject"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0045b1baa88e21fbf",
            "route_table_id": "rtb-04cdf2a1d61540bb1",
            "subnet_id": "subnet-0f921ddbd0fe62bb1"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.o4bproject-public",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_dev_ec2_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0f295e5b8372e6047",
            "description": "Only allow publis SG resources to access these instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f295e5b8372e6047",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow health checking for instances using this SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0027127de01809d1c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "o4bproject-dev-ec2-private-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-dev-ec2-private-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-dev-ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_dev_ec2_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0027127de01809d1c",
            "description": "security group for Internet facing EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0027127de01809d1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.11.244.82/32",
                  "5.148.137.82/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.11.244.82/32",
                  "5.148.137.82/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "3.11.244.82/32",
                  "5.148.137.82/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "o4bproject-dev-ec2-public-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-dev-ec2-public-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-dev-ec2-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.o4bproject"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0eafed1506eaf4ef9",
            "description": "Security group rules for o4bproject-EFS",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to EC2 port from EFS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eafed1506eaf4ef9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic to EFS port from EC2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "o4bproject-efs-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-efs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_elk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0a643594ae5c976f3",
            "description": "Security group rules for o4bproject-ELK",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to EC2 port from ELK",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a643594ae5c976f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic to ELK port from EC2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "o4bproject-elk-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-elk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-elk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_inner_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-072ebbb65c35274bf",
            "description": "Security group for inner alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to instances on the load balancer listener port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-072ebbb65c35274bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic on the load balancer http listener port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "o4bprocject-inner-alb-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-inner-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-inner-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_outer_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-016df23d4d32c0647",
            "description": "Security group for outer alb",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to instances on the load balancer listener port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0027127de01809d1c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-016df23d4d32c0647",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.11.244.82/32",
                  "5.148.137.82/32"
                ],
                "description": "Allow inbound traffic from these IPs on the load balancer http listener port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "3.11.244.82/32",
                  "5.148.137.82/32"
                ],
                "description": "Allow inbound traffic from these IPs on the load balancer https listener port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "o4bproject-outer-alb-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bprocject-outer-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bprocject-outer-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0493da7a72596703a",
            "description": "Security group rule for o4bproject-rds",
            "egress": [],
            "id": "sg-0493da7a72596703a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic to MySQL port from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "o4bproject-rds-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "o4bproject_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:security-group/sg-0f2e2d1690145ac5b",
            "description": "Security group rules for redis cluster",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to EC2 port from Redis cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2e2d1690145ac5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic to redis port from EC2",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f295e5b8372e6047"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "o4bproject-redis-sg",
            "name_prefix": "",
            "owner_id": "410587888893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "o4bproject-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "o4bproject-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg",
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bprocject_ec2_mysql_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic on the instance Mysql port",
            "from_port": 3306,
            "id": "sgrule-624004819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f295e5b8372e6047",
            "self": false,
            "source_security_group_id": "sg-0493da7a72596703a",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bproject_ec2_http_in_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all inbound traffic from ec2 on http port",
            "from_port": 80,
            "id": "sgrule-562597199",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f295e5b8372e6047",
            "self": false,
            "source_security_group_id": "sg-0027127de01809d1c",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_dev_ec2_public_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bproject_ec2_http_inner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all inbound traffic from the load balancer on http port",
            "from_port": 80,
            "id": "sgrule-651063046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f295e5b8372e6047",
            "self": false,
            "source_security_group_id": "sg-072ebbb65c35274bf",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_inner_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bproject_ec2_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic on the instance http port",
            "from_port": 80,
            "id": "sgrule-809102153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0027127de01809d1c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_public_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bproject_ec2_http_outer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all inbound traffic from the load balancer on http port",
            "from_port": 80,
            "id": "sgrule-336705990",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f295e5b8372e6047",
            "self": false,
            "source_security_group_id": "sg-016df23d4d32c0647",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_private_sg",
            "aws_security_group.o4bproject_outer_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "o4bproject_ec2_https_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic on the instance https port",
            "from_port": 443,
            "id": "sgrule-4010109112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0027127de01809d1c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.o4bproject_dev_ec2_public_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "o4bproject-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:subnet/subnet-0c1fa5d40ceae0ac9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1fa5d40ceae0ac9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410587888893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-subnet-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-subnet-0"
            },
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:subnet/subnet-0fa60287c4c2c1ac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa60287c4c2c1ac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410587888893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-private-subnet-1"
            },
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "o4bproject-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:subnet/subnet-03f5544ac8342b14a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f5544ac8342b14a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410587888893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-subnet-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-subnet-0"
            },
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:subnet/subnet-0f921ddbd0fe62bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f921ddbd0fe62bb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410587888893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-public-subnet-1"
            },
            "vpc_id": "vpc-09637901bbd6f2946"
          },
          "dependencies": [
            "aws_vpc.o4bproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "o4bproject",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410587888893:vpc/vpc-09637901bbd6f2946",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b99ff74bcd8c84b5",
            "default_route_table_id": "rtb-0f73585888ed51af4",
            "default_security_group_id": "sg-03db9ca86528d7c6f",
            "dhcp_options_id": "dopt-3c5e7259",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09637901bbd6f2946",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f73585888ed51af4",
            "owner_id": "410587888893",
            "tags": {
              "Environment": "dev",
              "Name": "AmpDevO4b-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AmpDevO4b-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}